# Counters

./: CMakeLists.txt  README.md  prep.sh
src/: counters.cpp  counters.h  main.cpp
test_data/: bad_ans.txt  good_ans.txt
tests/: tests.cpp
